--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <form id="login" class="input-group">
             <input type="text" class="input-field" placeholder="User Id" required>
               <input type="text" class="input-field" placeholder="Enter Password" required>
-              <input type="checkbox" class="chech-box"> <span>Remember password</span>
+              <input type="checkbox" class="chech-box"> <span>Remember Password</span>
               <button type="submit" class="submit-btn">Login</button>
             </form>  
             <form id="register" class="input-group">
